--- a/src/components/ChatTennet/package.json
+++ b/src/components/ChatTennet/package.json
@@ -1,6 +1,6 @@
 {
   "name": "chat-tennet",
-  "version": "0.7.0",
+  "version": "0.9.0",
   "private": false,
   "license": "MIT",
   "keywords": ["tennet", "chat", "react"],
@@ -8,5 +8,6 @@
     "name": "jhosorio",
     "email": "jhostineosorio@gmail.com",
     "url": "https://github.com/JhostinOsorio"
-  }
+  },
+  "homepage": "https://github.com/JhostinOsorio/chat_tennet"
 }
